--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AM 領航員：里程流水帳版</title>
+  <title>AM 領航員：里程流水帳 (含 LINE POINTS)</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.sheetjs.com/xlsx-0.20.0/package/dist/xlsx.full.min.js"></script>
   <style>
@@ -84,8 +84,14 @@
           <h2>手動調整點數</h2>
           <div class="grid-2">
               <select id="adjType">
-                  <option value="AM">AM 實體里程</option><option value="DBS_PT">星展點數</option><option value="OPEN_PT">OpenPoint</option>
-                  <option value="HAMI_PT">HamiPoint</option><option value="HG_PT">HappyGo</option><option value="CUBE_PT">小樹點</option><option value="TS_PT">台新點</option>
+                  <option value="AM">AM 實體里程</option>
+                  <option value="DBS_PT">星展點數</option>
+                  <option value="OPEN_PT">OpenPoint</option>
+                  <option value="LINE_PT">LINE POINTS</option>
+                  <option value="HAMI_PT">HamiPoint</option>
+                  <option value="HG_PT">HappyGo</option>
+                  <option value="CUBE_PT">小樹點</option>
+                  <option value="TS_PT">台新點</option>
               </select>
               <input type="number" id="adjVal" placeholder="+/- 點數">
           </div>
@@ -108,7 +114,7 @@
 
   <div id="sec-history" class="section hidden">
       <div class="card">
-          <h2>歷史消費紀錄</h2>
+          <h2>歷史紀錄</h2>
           <div class="grid-2">
               <button onclick="exportExcel()" style="background:#2ecc71; color:white; border:none; padding:10px; border-radius:8px; cursor:pointer;">匯出</button>
               <button onclick="document.getElementById('importFile').click()" style="background:#3498db; color:white; border:none; padding:10px; border-radius:8px; cursor:pointer;">匯入</button>
@@ -146,9 +152,10 @@
 </div>
 
 <script>
-  let state = JSON.parse(localStorage.getItem('am_uni_v11')) || {
+  // 更新版本號為 v12
+  let state = JSON.parse(localStorage.getItem('am_uni_v12')) || {
       records: [], adjusts: [], goal: { name: "里程目標", target: 50000 },
-      rates: { AM: 1, DBS_PT: 2, OPEN_PT: 0.25, HAMI_PT: 0.33, HG_PT: 0.25, CUBE_PT: 0.36, TS_PT: 0.55 }
+      rates: { AM: 1, DBS_PT: 2, OPEN_PT: 0.25, LINE_PT: 0.2, HAMI_PT: 0.33, HG_PT: 0.25, CUBE_PT: 0.36, TS_PT: 0.55 }
   };
 
   function getMonthStats() {
@@ -196,7 +203,6 @@
   }
 
   function renderLedger(s) {
-      // 合併手動調整與自動回饋
       let ledger = state.adjusts.map(a => ({ ...a, isManual: true }));
       state.records.forEach(r => {
           const reward = calculateRowReward(r, s);
@@ -239,7 +245,7 @@
               return rw.ptKey === k ? sum + rw.ptAmount : sum;
           }, 0);
           let count = fromAdj + fromRec;
-          return `<div class="stat-box" style="border-bottom:1px solid #EEE; padding:5px 0;"><span>${k}</span><span>${Math.round(count).toLocaleString()} (≈${Math.round(count*v).toLocaleString()} AM)</span></div>`;
+          return `<div class="stat-box" style="border-bottom:1px solid #EEE; padding:5px 0;"><span>${k.replace('_PT','')}</span><span>${Math.round(count).toLocaleString()} (≈${Math.round(count*v).toLocaleString()} AM)</span></div>`;
       }).join('');
   }
 
@@ -308,7 +314,7 @@
       reader.readAsArrayBuffer(e.target.files[0]);
   }
 
-  function save() { localStorage.setItem('am_uni_v11', JSON.stringify(state)); refreshUI(); }
+  function save() { localStorage.setItem('am_uni_v12', JSON.stringify(state)); refreshUI(); }
   function delRec(id) { if(confirm("刪除此消費？回饋也會同步扣除")) { state.records = state.records.filter(r=>r.id!==id); save(); } }
   function delAdj(id) { if(confirm("刪除此調整紀錄？")) { state.adjusts = state.adjusts.filter(a=>a.id!==id); save(); } }
   function clearAll() { if(confirm("確定重置所有資料？")) { localStorage.clear(); location.reload(); } }
@@ -316,7 +322,7 @@
   document.getElementById('txDate').valueAsDate = new Date();
   document.getElementById('setGoalName').value = state.goal.name;
   document.getElementById('setGoalTarget').value = state.goal.target;
-  document.getElementById('rateInputs').innerHTML = Object.keys(state.rates).map(k => `<div class="form-row"><label>${k} 比例</label><input type="number" step="0.01" id="rate_${k}" value="${state.rates[k]}"></div>`).join('');
+  document.getElementById('rateInputs').innerHTML = Object.keys(state.rates).map(k => `<div class="form-row"><label>${k.replace('_PT','')} 比例</label><input type="number" step="0.01" id="rate_${k}" value="${state.rates[k]}"></div>`).join('');
   refreshUI();
 </script>
 </body>
